...
    <string name="app_name">SplitFree</string>

    <!-- Common -->
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="copy">Copy</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="skip">Skip</string>
    <string name="edit">Edit</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
...
